--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,7 @@
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+      "gcm_sender_id": "103953800507"
     }
   ],
   "start_url": "./index.html",
