--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "Qvinyl",
   "version": "0.1.0",
-  "homepage": "https://qvinyl.github.io/Qvinyl/public/index.html",
+  "homepage": "https://qvinyl.github.io/Qvinyl",
   "private": true,
   "dependencies": {
     "firebase": "^5.2.0",
+    "npm": "^6.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-player": "^1.6.4",
