--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "homepage": "https://qvinyl.github.io/Qvinyl/public/login.html",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.2",
     "firebase": "^5.2.0",
     "npm": "^6.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-player": "^1.6.4",
     "react-scripts": "1.1.4",
+    "reactstrap": "^6.3.0",
     "redux": "^4.0.0",
     "video-react": "^0.11.2"
   },
