--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "firebase": "^5.2.0",
     "npm": "^6.2.0",
     "react": "^16.4.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.1",
+    "react-overflow-scrolling": "^0.1.5",
     "react-player": "^1.6.4",
     "react-scripts": "1.1.4",
+    "react-scrollbar": "^0.5.4",
     "reactstrap": "^6.3.0",
     "redux": "^4.0.0",
     "video-react": "^0.11.2"
