--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.1.2",
     "firebase": "^5.2.0",
     "npm": "^6.2.0",
+    "rc-progress": "^2.2.5",
     "react": "^16.4.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.1",
