--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.4.1",
     "react-overflow-scrolling": "^0.1.5",
     "react-player": "^1.6.4",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-scrollbar": "^0.5.4",
     "reactstrap": "^6.3.0",
